# mandor

./: .gitignore  A.text  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  git_state.rs  main.rs  opencode.rs  terminal.rs  watcher.rs  worktree.rs
src/components/diff/: DiffViewer.tsx  FileComments.tsx  FileDiffViewer.tsx  InlineDiffViewer.tsx
src/components/layout/: AppShell.tsx  CenterPanel.tsx  MainContent.tsx  ReviewPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/terminal/: TUIInstance.tsx  TerminalInstance.tsx  TerminalPanel.tsx
src/components/worktree/: CreateWorktreeModal.tsx  WorktreeList.tsx  WorktreeView.tsx
src/contexts/: SSEContext.tsx
src/hooks/: useSSE.ts
src/lib/: invokeLogger.ts  logger.ts
src/stores/: appStore.ts
src/types/: index.ts
